Added styles and main js

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./public/styles.css">
     <title>Howdy</title>
 </head>
 <body>
     <h1>Welcome to the best website in the universe!</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam beatae, consequatur cumque odio quae repellendus iusto eos vitae mollitia soluta voluptate animi quos esse reiciendis ut. Facilis labore commodi libero.</p>
 
-    <script src="./main.js"></script>
+    <img src="./The_Two_Faces_of_Squidward_174 (1).png" alt="handsome-squidward photo">
+    
+    <script src="./public/main.js"></script>
 </body>
 </html>
