--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Howdy</title>
 </head>
 <body>
@@ -13,6 +13,6 @@
 
     <img src="./The_Two_Faces_of_Squidward_174 (1).png" alt="handsome-squidward photo">
     
-    <script src="./public/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
